Fix T100760: No color attribute initialization when created by brush

Caused by 25237d2625078c6d.